--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <header class="flex-col justify-center p-6 sm:pb-0 sm:pt-4 sm:px-40 sm:w-full dark:bg-darkTheme-200">
     <div class="flex flex-row items-baseline justify-between w-full">
       <h1 class="text-xl font-bold sm:text-2xl dark:text-white">Social Media Dashboard</h1>
-      <button class="bg-gray-100 text-lg w-7 rounded h-7 sm:pl-1.5" id="switchTheme">
+      <button class="bg-gray-100 text-lg w-7 rounded h-7 sm:pl-1.5" id="switchTheme" aria-label="switchTheme">
         <i class="fas fa-moon"></i>
         <!-- <i class="hidden dark:flex far fa-sun"></i> -->
       </button>
